--- a/pom.xml
+++ b/pom.xml
@@ -14,7 +14,11 @@
             <artifactId>zookeeper</artifactId>
             <version>3.4.5</version>
         </dependency>
-
+        <dependency>
+            <groupId>com.github.adyliu</groupId>
+            <artifactId>zkclient</artifactId>
+            <version>2.1.2</version>
+        </dependency>
         <dependency>
             <groupId>org.apache.commons</groupId>
             <artifactId>commons-lang3</artifactId>
