--- a/src/main/resources/zookeeper.properties
+++ b/src/main/resources/zookeeper.properties
@@ -1,1 +1,5 @@
 zk.server = 192.168.31.200:2181
+zk.timeout = 5000
+zk.configpath = /configServer
+zk.serverpath = server
+zk.serverpath.dbconfig=dbconfig
