--- a/pom.xml
+++ b/pom.xml
@@ -29,5 +29,15 @@
             <artifactId>fastjson</artifactId>
             <version>1.2.21</version>
         </dependency>
+        <dependency>
+            <groupId>org.apache.curator</groupId>
+            <artifactId>curator-framework</artifactId>
+            <version>2.4.0</version>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.curator</groupId>
+            <artifactId>curator-recipes</artifactId>
+            <version>2.4.0</version>
+        </dependency>
     </dependencies>
 </project>
